Make use of the common functions in the common script